package Representation;

/**
 * Classe representant les classes utilisé dans la classe curantes
 *existence de la methode getclasses permettant de recuperer
 * toute les classes particiapant à une classe la supprime-t-on?.
 * à voir.
 */
/*public class Import extends Instance {

    public Import(String s) throws ClassNotFoundException {
        super(s);
    }

    @Override
    public String toString() {
        return null;
    }

    public String getNom() {
        return nom;
    }
}
*/